# Foundation-of-Fine-Grain-Parallelism

./: README.md
Assignment 1/: dgemm.c
Assignment 2/: Assignment 2_ISSC script.txt
Assignment 3/: Exercise 2 Q4_python script.py  Exercise 3 Q1_python script .py
Assignment 3/pocc-1.4/generators/clastannotation/: ChangeLog  Makefile  configure.ac  libtool
Assignment 3/pocc-1.4/generators/clastannotation/clastannotation/: Makefile  Makefile.am  annotate.lo  libclastannotation.la  xmalloc.c  xstrdup.lo  xstrerror.c
Assignment 3/pocc-1.4/generators/clastannotation/clastannotation/.deps/: xstrdup.Plo
Assignment 3/pocc-1.4/generators/clastannotation/clastannotation/include/clastannotation/: config.h  stamp-h1
Assignment 3/pocc-1.4/generators/clastannotation/doc/: Makefile.am  Makefile.in
Assignment 3/pocc-1.4/generators/clastannotation/src/: Makefile.in  clastannotation.c  clastannotation.h
Assignment 3/pocc-1.4/generators/clastannotation/src/.libs/: clastannotation
Assignment 3/pocc-1.4/generators/clastannotation/tests/: Makefile.in
Assignment 3/pocc-1.4/generators/clasttools/: AUTHORS  ChangeLog  Makefile.in  configure  configure.ac
Assignment 3/pocc-1.4/generators/clasttools/clasttools/: Makefile.am  Makefile.in  clast2past.lo  clastext.c  clastext.lo  utils.c
Assignment 3/pocc-1.4/generators/clasttools/clasttools/.deps/: clastext.Plo  pprint.Plo  utils.Plo  xmalloc.Plo  xstrdup.Plo  xstrerror.Plo
Assignment 3/pocc-1.4/generators/clasttools/clasttools/.libs/: libclasttools.la
Assignment 3/pocc-1.4/generators/clasttools/clasttools/include/clasttools/: config-h.in  error.h  stamp-h1  utils.h
Assignment 3/pocc-1.4/generators/clasttools/doc/: Makefile  Makefile.am
Assignment 3/pocc-1.4/generators/clasttools/src/: Makefile  Makefile.am  Makefile.in  clasttools  clasttools.c  clasttools.h
Assignment 3/pocc-1.4/generators/clasttools/tests/: Makefile  Makefile.in  checker.sh
Assignment 3/pocc-1.4/generators/cloog/: Makefile.am  aclocal.m4  cloog-isl-uninstalled.pc  configure  libcloog-isl.la  libcloog_isl_la-backend.lo  libcloog_isl_la-constraints.lo  libcloog_isl_la-domain.lo  libcloog_isl_la-loop.lo  libcloog_isl_la-names.lo  libcloog_isl_la-options.lo  libcloog_isl_la-statement.lo  libtool
Assignment 3/pocc-1.4/generators/ptile/: ChangeLog  Makefile  Makefile.am  bootstrap.sh  configure.ac  libtool
Assignment 3/pocc-1.4/generators/ptile/config/: ptile.m4
Assignment 3/pocc-1.4/generators/ptile/doc/: Makefile.in
Assignment 3/pocc-1.4/generators/ptile/ptile/: xstrdup.c
Assignment 3/pocc-1.4/generators/ptile/ptile/.libs/: TilingDriver.o.filepart
Assignment 3/pocc-1.4/generators/ptile/src/: parametrictiling.c  ptile
Assignment 3/pocc-1.4/generators/ptile/src/.deps/: parametrictiling.Po
Assignment 3/pocc-1.4/generators/ptile/tests/: Makefile.am  checker.sh
Assignment 3/pocc-1.4/generators/punroller/: ChangeLog  Makefile.in  bootstrap.sh  config.status  libtool
Assignment 3/polybench-c-4.2.1-beta/utilities/: polybench.h
Assignment 4/: Exercise1_ISSC script.txt  Exercise3_ISSC script.txt  ISSC script  gemm-simp.pocc.cu
Assignment 4/pocc-1.4/generators/clastannotation/: AUTHORS  Makefile.am  Makefile.in  bootstrap.sh  config.status  configure
Assignment 4/pocc-1.4/generators/clastannotation/clastannotation/: Makefile.in  annotate.c  error.c  xstrdup.c
Assignment 4/pocc-1.4/generators/clastannotation/clastannotation/.deps/: annotate.Plo  error.Plo  xmalloc.Plo  xstrerror.Plo
Assignment 4/pocc-1.4/generators/clastannotation/clastannotation/.libs/: libclastannotation.lai
Assignment 4/pocc-1.4/generators/clastannotation/clastannotation/include/clastannotation/: config-h.in
Assignment 4/pocc-1.4/generators/clastannotation/config/: clastannotation.m4
Assignment 4/pocc-1.4/generators/clastannotation/doc/: Makefile
Assignment 4/pocc-1.4/generators/clastannotation/src/: Makefile  Makefile.am  clastannotation
Assignment 4/pocc-1.4/generators/clastannotation/src/.deps/: clastannotation.Po
Assignment 4/pocc-1.4/generators/clastannotation/tests/: Makefile  Makefile.am  checker.sh
Assignment 4/pocc-1.4/generators/clasttools/: Makefile  Makefile.am  config.status  libtool
Assignment 4/pocc-1.4/generators/clasttools/clasttools/: Makefile  clast2past.c  error.c  pprint.c  pprint.lo  xmalloc.c  xstrdup.c  xstrerror.c
Assignment 4/pocc-1.4/generators/clasttools/clasttools/.deps/: clast2past.Plo  error.Plo
Assignment 4/pocc-1.4/generators/clasttools/clasttools/include/clasttools/: common.h  config.h
Assignment 4/pocc-1.4/generators/clasttools/doc/: Makefile.in
Assignment 4/pocc-1.4/generators/clasttools/src/.deps/: clasttools.Po
Assignment 4/pocc-1.4/generators/clasttools/src/.libs/: clasttools
Assignment 4/pocc-1.4/generators/clasttools/tests/: Makefile.am
Assignment 4/pocc-1.4/generators/cloog/: CLOOG_HEAD  Makefile  Makefile.in  cloog  cloog-isl-uninstalled.sh  cloog-isl.pc  (+15 more)
Assignment 4/pocc-1.4/generators/ptile/ptile/: FullTileMaker.lo  InputReaderParser.lo  Makefile.am
Assignment 4/pocc-1.4/generators/ptile/src/: Makefile  Makefile.am  Makefile.in  parametrictiling.h
Assignment 4/pocc-1.4/generators/punroller/: Makefile  Makefile.am  configure  configure.ac
Assignment 4/pocc-1.4/generators/punroller/config/: punroller.m4
Assignment 4/pocc-1.4/generators/punroller/doc/: Makefile.am  Makefile.in
Assignment 4/pocc-1.4/generators/punroller/punroller/: Makefile.am  Makefile.in  list.c  list.lo  punroll.lo
Assignment 4/pocc-1.4/generators/punroller/punroller/.deps/: error.Plo  punroll.Plo  xmalloc.Plo  xstrerror.Plo
Assignment 4/pocc-1.4/generators/punroller/punroller/.libs/: libpunroller.lai
Assignment 4/pocc-1.4/generators/punroller/punroller/include/punroller/: common.h  config-h.in  error.h
Assignment 4/pocc-1.4/generators/punroller/src/: Makefile  Makefile.am
Assignment 4/pocc-1.4/generators/punroller/src/.deps/: punroller.Po
Assignment 4/pocc-1.4/generators/punroller/src/.libs/: punroller
Assignment 4/pocc-1.4/generators/punroller/tests/: checker.sh
Assignment 4/pocc-1.4/info/: pocc.info
(+103 files in other folders)
